--- a/styles/pages/_index.module.scss
+++ b/styles/pages/_index.module.scss
@@ -74,4 +74,11 @@
   &Title {
     font-size: 1.5rem;
   }
+  &Role {
+    font-size: 1rem;
+    padding-left: 16px;
+  }
+  &Skill {
+    padding-top: 8px;
+  }
 }
