--- a/styles/pages/_index.module.scss
+++ b/styles/pages/_index.module.scss
@@ -71,12 +71,23 @@
 }
 
 .about {
-  &Title {
+  &Profile {
+
+    @media screen and (min-width: 1024px) {
+      display: flex;
+    }
+
+  }
+  &Name {
     font-size: 1.5rem;
   }
   &Role {
     font-size: 1rem;
-    padding-left: 16px;
+
+    @media screen and (min-width: 480px) {
+      padding-left: 16px;
+      margin: auto 0;
+    }
   }
   &Skill {
     padding-top: 8px;
